fixing issue in IE - overlapping subtitle in editor

--- a/packages/editor/src/variables.scss
+++ b/packages/editor/src/variables.scss
@@ -26,7 +26,7 @@ input[type=text]:focus {
     display: -ms-grid;
     grid-template-columns: 1fr 50px; 
     -ms-grid-columns: 1fr 50px;
-    height: 80px;
+    height: 90px;
 }
 
 .fql-editor-title {
